# grip-py

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/grip_py/: __init__.py  core.py
src/grip_py/core/: __init__.py  async_loop.py  async_state_helpers.py  async_tap.py  atom_tap.py  base_tap.py  context.py  drip.py  errors.py  function_tap.py  graph.py  graph_dump.py  grip.py  grok.py  grok_impl.py  interfaces.py  local_persistence.py  matcher.py  passive_tap.py  query.py  query_evaluator.py  tap.py  tap_materialization_registry.py  tap_resolver.py  task_queue.py  use_grip.py
tests/: test_core.py
tests/core/: test_async_state_helpers.py  test_async_tap.py  test_async_tap_advanced.py  test_async_tap_history.py  test_async_tap_perf.py  test_atom_tap.py  test_base_tap_behavior.py  test_context.py  test_destination_lifecycle.py  test_drip.py  test_engine.py  test_function_tap.py  test_function_tap_state_handle.py  test_graph_dump.py  test_graph_gc.py  test_grip.py  test_grip_registry.py  test_grok_sequence.py  test_local_persistence.py  test_matcher.py  test_query_evaluator.py  test_query_model.py  test_tap_execution_role.py  test_tap_factory.py  test_tap_hierarchy_complex.py  test_tap_resolver.py  test_tap_resolver_delta.py  test_task_queue.py  test_use_grip.py  test_watch_drip.py
tests/core/helpers/: test_taps.py
